[gd_scene load_steps=5 format=3 uid="uid://dlb183x3gxpiy"]

[ext_resource type="Script" path="res://Scripts/lighting_system.gd" id="1_lpkb2"]
[ext_resource type="Script" path="res://Scripts/point_light.gd" id="2_a2osr"]
[ext_resource type="Script" path="res://Scripts/directional_light.gd" id="3_qxomw"]
[ext_resource type="Script" path="res://Scripts/lighting_demo_ui.gd" id="4_rjk5l"]

[node name="LightingDemo" type="Node2D"]

[node name="LightingSystem" type="Node" parent="."]
script = ExtResource("1_lpkb2")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_rjk5l")

[node name="Panel" type="Panel" parent="UI"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 100.0

[node name="TimeLabel" type="Label" parent="UI/Panel"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 190.0
offset_bottom = 36.0
text = "Time: 12:00 PM"

[node name="PresetLabel" type="Label" parent="UI/Panel"]
layout_mode = 0
offset_left = 10.0
offset_top = 40.0
offset_right = 190.0
offset_bottom = 66.0
text = "Preset: DAY"

[node name="TimeControls" type="HBoxContainer" parent="UI/Panel"]
layout_mode = 0
offset_left = 10.0
offset_top = 70.0
offset_right = 190.0
offset_bottom = 100.0

[node name="SlowButton" type="Button" parent="UI/Panel/TimeControls"]
layout_mode = 2
text = "<<"

[node name="PlayButton" type="Button" parent="UI/Panel/TimeControls"]
layout_mode = 2
text = "►"

[node name="PauseButton" type="Button" parent="UI/Panel/TimeControls"]
layout_mode = 2
text = "❚❚"

[node name="FastButton" type="Button" parent="UI/Panel/TimeControls"]
layout_mode = 2
text = ">>"

[node name="Lights" type="Node2D" parent="."]

[node name="CandleLight" type="Node2D" parent="Lights"]
position = Vector2(400, 300)
script = ExtResource("2_a2osr")
light_preset = "CANDLE"

[node name="FluorescentLight" type="Node2D" parent="Lights"]
position = Vector2(600, 200)
script = ExtResource("2_a2osr")
light_preset = "FLUORESCENT"

[node name="EmergencyLight" type="Node2D" parent="Lights"]
position = Vector2(200, 500)
script = ExtResource("2_a2osr")
light_enabled = false
light_preset = "EMERGENCY"

[node name="MoonLight" type="Node2D" parent="Lights"]
position = Vector2(800, 100)
script = ExtResource("3_qxomw")
initial_rotation = 45.0
height = 50.0
base_energy = 0.5
base_color = Color(0.6, 0.6, 0.8, 1)

[node name="SunLight" type="Node2D" parent="Lights"]
position = Vector2(100, 100)
script = ExtResource("3_qxomw")
initial_rotation = -45.0
height = 100.0
base_energy = 1.0
base_color = Color(1, 0.95, 0.9, 1)

[node name="Background" type="ColorRect" parent="."]
z_index = -100
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.2, 0.2, 0.2, 1) 